Fix social link visibility for mobile devices

--- a/src/WebSite/wwwroot/css/site.css
+++ b/src/WebSite/wwwroot/css/site.css
@@ -435,8 +435,7 @@ footer ul {
         display: none;
     }
 
-    .link-fb,
-    .link-twitter {
+    .social-link {
         display: none !important;
     }
 
